# swagsh

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: release.yaml  rust.yaml  rust.yml
fuzz/: Cargo.toml  README.md  clean.sh
fuzz/fuzz_targets/: eval_arith.rs  param_expand.rs  parse.rs  unescape.rs
src/: app.rs  ast.rs  builtins.rs  cli.rs  env.rs  errfmt.rs  eval.rs  exec.rs  expand.rs  fd.rs  jobs.rs  lexer.rs  lib.rs  main.rs  parser.rs  prompt.rs  repl.rs  signal.rs
src/builtins/: alias.rs  cli.rs  dirs.rs  echo.rs  env.rs  flow.rs  getopts.rs  introspect.rs  io.rs  jobs.rs  kill.rs  output.rs  printf.rs  read.rs  script.rs  test.rs  wait.rs
src/eval/: compound.rs  exec.rs  expand.rs
src/parser/: compound.rs
