[package]
name = "swagsh"
version = "0.8.0"
edition = "2024"
description = "A fast, minimal, modern Linux shell. Named after swag, slang for stylish flair."
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/takashialpha/swagsh"
keywords = ["shell", "cli", "linux", "terminal"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
rustyline = "18"
rustc-hash = "2"
rustix = { version = "1", features = [
  "fs",
  "pipe",
  "termios",
  "process",
  "runtime",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
