[package]
name = "swagsh"
version = "0.8.0"
edition = "2024"
description = "A fast, minimal, modern Linux shell. Named after swag, slang for stylish flair."
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/takashialpha/swagsh"
keywords = ["shell", "cli", "linux", "terminal"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
rustyline = "18"
rustc-hash = "2"
rustix = { version = "1", features = [
  "fs",
  "pipe",
  "termios",
  "process",
  "runtime",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
warnings = "deny"

# Security
non_ascii_idents = "forbid"

# Deny old style Rust
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"

# Easy to read style and opinionated best practices
unused_qualifications = "deny"
explicit_outlives_requirements = "warn"
single_use_lifetimes = "warn"

# General cleanliness and cleanup
unused_macro_rules = "warn"
unused_extern_crates = "deny"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Not actionable in this repo: flags duplicate transitive dependency versions
# pulled in via our dependency tree.
multiple_crate_versions = "allow"

# Not applicable to a shell: forked pipeline/job-control children and the
# `exit` builtin must call `process::exit` directly wherever they are, not
# just from `main`, since unwinding back up through Rust destructors after a
# `fork()` is unsafe and not what a shell's own `exit` means anyway.
exit = "allow"

# Selected `clippy::restriction` lints (not enabled as a group: many of its
# lints actively conflict with each other or with pedantic/nursery choices
# above).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
mem_forget = "deny"
verbose_file_reads = "deny"
empty_drop = "deny"
float_cmp_const = "deny"
large_include_file = "deny"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
empty_structs_with_brackets = "deny"
format_push_string = "deny"
redundant_type_annotations = "deny"
semicolon_outside_block = "deny"
undocumented_unsafe_blocks = "deny"
unneeded_field_pattern = "deny"
mod_module_files = "deny"
unused_async = "deny"
