[package]
name = "swagsh-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.swagsh]
path = ".."

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eval_arith"
path = "fuzz_targets/eval_arith.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unescape"
path = "fuzz_targets/unescape.rs"
test = false
doc = false
bench = false

[[bin]]
name = "param_expand"
path = "fuzz_targets/param_expand.rs"
test = false
doc = false
bench = false

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

# Security
non_ascii_idents = "forbid"

# Deny old style Rust
rust_2018_idioms = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
absolute_paths_not_starting_with_crate = "deny"

# Easy to read style and opinionated best practices
explicit_outlives_requirements = "warn"
single_use_lifetimes = "warn"

# General cleanliness and cleanup
unused_macro_rules = "warn"
unused_extern_crates = "deny"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Selected `clippy::restriction` lints (not enabled as a group: many of its
# lints actively conflict with each other or with pedantic/nursery choices
# above).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
exit = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
mem_forget = "deny"
verbose_file_reads = "deny"
empty_drop = "deny"
float_cmp_const = "deny"
large_include_file = "deny"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
empty_structs_with_brackets = "deny"
format_push_string = "deny"
redundant_type_annotations = "deny"
semicolon_outside_block = "deny"
undocumented_unsafe_blocks = "deny"
unneeded_field_pattern = "deny"
mod_module_files = "deny"
unused_async = "deny"
